syntax="proto3";

package proto;

option go_package = "./proto";

service UserService {
	rpc CreateUser(CreateUserRequest) returns (UserResponse);
}

message CreateUserRequest {
	string name = 1;
	string email = 2;
}

message UserResponse {
	int32 id = 1;
	string name = 2;
	string email = 3;
}  
